# coinpaprika-api-rust-client

./: Cargo.toml  LICENSE  README.md
examples/: basic.rs  changelog.rs  coins.rs  contracts.rs  exchanges.rs  global.rs  key.rs  people.rs  tags.rs  tickers.rs  tools.rs
src/: client.rs  error.rs  lib.rs
src/changelog/: mod.rs
src/coins/: mod.rs
src/contracts/: mod.rs
src/exchanges/: mod.rs
src/global/: mod.rs
src/key/: mod.rs
src/people/: mod.rs
src/tags/: mod.rs
src/tickers/: mod.rs
src/tools/: mod.rs
