[package]
name = "coinpaprika-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
