[package]
name = "coinpaprika-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Coinpaprika API Rust library provides access to Coinpaprika API for applications written in Rust programming language."
repository = "https://github.com/tokenomia-pro/coinpaprika-api-rust-client"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["coinpaprika", "api"]

[dependencies]
reqwest-middleware = "0.1.6"
reqwest-retry = "0.1.5"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
